# cloudcompare

./: build.sh  env.sh
.github/workflows/: build.yml
plugins/core/Standard/qColorimetricSegmenter/: HSVDialog.cpp  HSVDialog.h  HSVDialog.ui  QuantiDialog.cpp  RgbDialog.cpp  RgbDialog.h  RgbDialog.ui  ScalarDialog.cpp  ScalarDialog.h  ScalarDialog.ui  qColorimetricSegmenter.cpp
plugins/core/Standard/qJSonRPCPlugin/: CMakeLists.txt
plugins/core/Standard/qJSonRPCPlugin/include/: jsonrpcserver.h
plugins/core/Standard/qJSonRPCPlugin/src/: JsonRPCPlugin.cpp  jsonrpcserver.cpp
